--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
         android:id="@+id/to"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:text="romaileo@gmail.com" />
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:layout_width="match_parent"
